--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-MY"
 title                    : "Tyrone Chen's website"
 title_separator          : "-"
 name                     : &name "Tyrone Chen"
-description              : &description "personal description"
+description              : &description "PhD student at Monash University"
 url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
