--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,6 +9,9 @@ main:
   - title: "Teaching"
     url: /teaching/
 
+  - title: "Awards and honours"
+    url: /awards/
+
   # - title: "Portfolio"
   #   url: /portfolio/
   #
