Migrate awards to portfolio

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,11 +9,11 @@ main:
   - title: "Teaching"
     url: /teaching/
 
-  - title: "Awards and honours"
-    url: /awards/
+  # - title: "Awards and honours"
+  #   url: /awards/
 
-  # - title: "Portfolio"
-  #   url: /portfolio/
+  - title: "Awards and honours"
+    url: /portfolio/
   #
   # - title: "Blog Posts"
   #   url: /year-archive/
