Update profile photo

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Tyrone Chen"
-  avatar           : "profile.jpg"
+  avatar           : "profile.png"
   bio              : "PhD student at Monash University"
   location         : # "Australia"
   employer         : "Monash University, Australia"
