Update weblink to point to homepage

--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ author:
   googlescholar    : "https://scholar.google.com/citations?user=Vu5h_KAAAAAJ&hl=en"
   email            : "tyrone.chen@monash.edu"
   researchgate     : # "https://www.researchgate.net/profile/Tyrone_Chen"
-  uri              : "https://bioinformaticslab.erc.monash.edu/"
+  uri              : "https://tyronechen.github.io/"
   bitbucket        : # "tyrone_chen"
   codepen          :
   dribbble         :
