Update twitter name

--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "tyrone__chen"
+  twitter          : "_tyronechen"
   vine             :
   weibo            : # "tyronechen91"
   xing             :
