--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               :  "UA-57561901-3" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          :
 
